--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "build/index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "tsx src/index.ts",
+    "dev": "tsx src/02-inteface.ts", 
     "start": "node ."
   },
   "devDependencies": {
